Changed deprecated code (new Integer())